// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    addRides={[Function]}
    addUser={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="login-container"
>
        <h1
                className="login-logo"
        >
                fullSend
        </h1>
        <button
                className="authorize-strava"
                onClick={[Function]}
        />
</div>,
      "className": "login-page",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="login-logo"
>
            fullSend
</h1>,
          <button
            className="authorize-strava"
            onClick={[Function]}
/>,
          false,
          undefined,
        ],
        "className": "login-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "fullSend",
            "className": "login-logo",
          },
          "ref": null,
          "rendered": "fullSend",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "authorize-strava",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "button",
        },
        false,
        undefined,
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="login-container"
>
          <h1
                    className="login-logo"
          >
                    fullSend
          </h1>
          <button
                    className="authorize-strava"
                    onClick={[Function]}
          />
</div>,
        "className": "login-page",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="login-logo"
>
              fullSend
</h1>,
            <button
              className="authorize-strava"
              onClick={[Function]}
/>,
            false,
            undefined,
          ],
          "className": "login-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "fullSend",
              "className": "login-logo",
            },
            "ref": null,
            "rendered": "fullSend",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "authorize-strava",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "button",
          },
          false,
          undefined,
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Login should match the snapshot once redirected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    addRides={[Function]}
    addUser={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="login-container"
>
        <h1
                className="login-logo"
        >
                fullSend
        </h1>
        <div
                className="enter-container"
        >
                <NavLink
                        activeClassName="active"
                        ariaCurrent="true"
                        className="enter-site"
                        onClick={[Function]}
                        to="/main"
                >
                        Send It
                </NavLink>
        </div>
</div>,
      "className": "login-page",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="login-logo"
>
            fullSend
</h1>,
          false,
          <div
            className="enter-container"
>
            <NavLink
                        activeClassName="active"
                        ariaCurrent="true"
                        className="enter-site"
                        onClick={[Function]}
                        to="/main"
            >
                        Send It
            </NavLink>
</div>,
          undefined,
        ],
        "className": "login-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "fullSend",
            "className": "login-logo",
          },
          "ref": null,
          "rendered": "fullSend",
          "type": "h1",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="enter-site"
              onClick={[Function]}
              to="/main"
>
              Send It
</NavLink>,
            "className": "enter-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "Send It",
              "className": "enter-site",
              "onClick": [Function],
              "to": "/main",
            },
            "ref": null,
            "rendered": "Send It",
            "type": [Function],
          },
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="login-container"
>
          <h1
                    className="login-logo"
          >
                    fullSend
          </h1>
          <div
                    className="enter-container"
          >
                    <NavLink
                              activeClassName="active"
                              ariaCurrent="true"
                              className="enter-site"
                              onClick={[Function]}
                              to="/main"
                    >
                              Send It
                    </NavLink>
          </div>
</div>,
        "className": "login-page",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="login-logo"
>
              fullSend
</h1>,
            false,
            <div
              className="enter-container"
>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            className="enter-site"
                            onClick={[Function]}
                            to="/main"
              >
                            Send It
              </NavLink>
</div>,
            undefined,
          ],
          "className": "login-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "fullSend",
              "className": "login-logo",
            },
            "ref": null,
            "rendered": "fullSend",
            "type": "h1",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                ariaCurrent="true"
                className="enter-site"
                onClick={[Function]}
                to="/main"
>
                Send It
</NavLink>,
              "className": "enter-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Send It",
                "className": "enter-site",
                "onClick": [Function],
                "to": "/main",
              },
              "ref": null,
              "rendered": "Send It",
              "type": [Function],
            },
            "type": "div",
          },
          undefined,
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
